# minibpe

./: Cargo.toml  README.md  pyproject.toml  timings.ipynb
python/minibpe/: __init__.py  basic.py  gpt4.py
src/: basic.rs  gpt4.rs  lib.rs  regex.rs  utils.rs
tests/: test_train.py
